--- a/ImpactMap/Views/Shared/_Map.cshtml
+++ b/ImpactMap/Views/Shared/_Map.cshtml
@@ -15,6 +15,11 @@
 // feature. People can enter geographical searches. The search box will return a
 // pick list containing a mix of places and predicted search terms.
 
+function init() {
+    document.getElementById("pac-init").innerHTML = "210 Newport Rd. Pittsburgh, PA 15221";
+    }
+window.onload = init;
+
 function initAutocomplete() {
   var map = new google.maps.Map(document.getElementById('map'), {
     center: {lat: -33.8688, lng: 151.2195},
