some dashboard stuff

--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -23,23 +23,71 @@
             @Html.DisplayNameFor(model => model.Investment.projectTo.report)
         </th>
     </tr>
-    @foreach (var item in Model.Investments)
+
+    @if (Model.Investments != null)
     {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.amount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.entityTo.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.categories)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.projectTo.report)
-        </td>
-    </tr>
+        foreach (var item in Model.Investments)
+        {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.amount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.entityTo.name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.categories)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.projectTo.report)
+            </td>
+        </tr>
+        }
     }
+    </table>
+
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Project.investmentIn.date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Project.investmentIn.amount)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Project.name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Project.investmentIn.entityFrom.name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Project.report)
+            </th>
+        </tr>
+        @if (Model.Investments != null)
+        {
+            foreach (var item in Model.Projects)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.investmentIn.date)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.investmentIn.amount)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.investmentIn.entityFrom.name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.report)
+                    </td>
+                </tr>
+            }
+        }
+        </table>
