--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -60,6 +60,14 @@
                 font-size: 13px;
                 font-weight: 300;
             }
+
+        .hideFormField {
+            display: none;
+        }
+
+        .showFormField {
+            display: block;
+        }
     </style>
 
 </head>
