--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -49,7 +49,8 @@
     }
     </table>
 
-    <table class="table">
+@*I commented all of this out because investmentIn and investmentOut are now lists and it was breaking stuff while I was doing other stuff ;)*@
+    @*<table class="table">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Project.investmentIn.date)
@@ -90,4 +91,4 @@
                 </tr>
             }
         }
-        </table>
+        </table>*@
