--- a/ImpactMap/Views/Projects/Create.cshtml
+++ b/ImpactMap/Views/Projects/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Project</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -15,15 +15,7 @@
         <hr />
         
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @*<div class="form-group">
-            <select name="entity_ID">
-                @foreach (var entity in Model.Entities)
-                {
-                    <option value=@entity.ID>@entity.name</option>
-          
-                }
-            </select>
-        </div>*@
+
         <div class="form-group">
             @Html.LabelFor(model => model.Project.name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
