--- a/ImpactMap/Views/Projects/Index.cshtml
+++ b/ImpactMap/Views/Projects/Index.cshtml
@@ -21,42 +21,67 @@
             @Html.DisplayNameFor(model => model.entity.name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.investmentIn)
+            @Html.DisplayNameFor(model => model.investmentsIn)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.investmentOut)
+            @Html.DisplayNameFor(model => model.investmentsOut)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.report)
         </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.entity.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.investmentIn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.investmentOut)
-        </td>
-        <td>
-            This needs to be a link to a report ;)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.entity.name)
+            </td>
+            <td>
+                @{
+                    foreach (var investmentIn in item.investmentsIn)
+                    {
+                        @Html.DisplayFor(model => investmentIn.entityFrom.name);
+                        <br />
+                        @Html.DisplayFor(model => investmentIn.amount)
+                        <br />
+                    }
+                }
+
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.investmentsOut)
+            </td>
+            <td>
+                No reports lol ;)
+            </td>
+            @*<td>
+                @{  int reportIDint = item.report.ID;
+                    int? reportIDnullableInt = reportIDint;
+                    if (reportIDnullableInt != null)
+                    {
+                        string reportID = Convert.ToString(item.report.ID);
+
+                        @Html.ActionLink("Report", reportID, "Details", "Report")
+                    }
+                    else
+                    {
+                        <span>No report available.</span>
+                    }
+                }
+            </td>*@
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+            </td>
+        </tr>
+                    }
 
 </table>
