--- a/ImpactMap/Views/Categories/Create.cshtml
+++ b/ImpactMap/Views/Categories/Create.cshtml
@@ -6,10 +6,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Add Category</h4>
         <hr />
@@ -25,10 +25,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Metrics, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div id="metrics"></div>
-                <span id="addMetric"><i class="fa fa-plus-circle" aria-hidden="true"></i>Add Metric</span>
+                <div id="displayMetrics">
+                </div>
+                @*<label>Enter Metric</label>*@
+                <input type="text" id="metrics" /> <i class="fa fa-plus-circle" aria-hidden="true" id="addMetric"></i><br>
+                <input name="newMetrics" id="newMetrics" type="hidden" />
             </div>
         </div>
+
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+
     </div>
 }
 
@@ -40,13 +51,88 @@
     @Scripts.Render("~/bundles/jqueryval")
 
     <script>
+        newMetrics = [];
 
+        //This Works
         function addMetrics() {
-           $('#metrics').append('<label>Enter Metric</label><input type="text" /><br>')
+            if($('#metrics').val() != ""){
+                newMetrics.push($('#metrics').val()); //pushes the metric into the newMetrics array
+                $('#displayMetrics').append('<span class="removeMetric" id="' + $('#metrics').val() + '">' + $('#metrics').val() + '<i class="fa fa-minus-circle" aria-hidden="true"></i></span><br>');//Adds the new metric to the display
+                $('#metrics').val("");//Clears the value of the input box to accept a new metric
+                $('#newMetrics').val(newMetrics.toString());//Converts newMetrics array to string and puts it into the hidden input
+                $('.removeMetric').click(function () { removeMetrics(this.id) });
+                console.log($('#newMetrics').val())
+            }
         };
+
+        //This works too!
+        function removeMetrics(id) {
+            var i = newMetrics.indexOf(id); //How do I know which one to remove since there is no id?
+            newMetrics.splice(i, 1);
+            $('#newMetrics').val(newMetrics.toString());
+            $('#' + id).remove();
+            console.log('Removed:' + newMetrics.toString());
+        };
+
+
 
         $('#addMetric').click(addMetrics);
 
+        $(document).ready(function () {
+            $(window).keydown(function (event) {
+                if (event.keyCode == 13) {
+                    event.preventDefault();
+                    enterMetric()
+
+
+                }
+            });
+        });
+
+
+        function enterMetric() {
+            $('#metrics').keypress(function (e) {
+                var key = e.which;
+                if (key == 13)  // the enter key code
+
+                {
+                    addMetrics();
+                }
+            })
+        }
+
+
+        //TODO - Need to remove the following
+         //************************************************************************************
+
+
+            function toggle_metric(id) {
+                // if it is not there
+                // add the hidden input element
+                // add the checkmark to the category
+                if (!$('#catspan' + id).hasClass('fa fa-check-square-o')) {
+                    selectedCategories.push(id);
+
+                    $('#categories').val(selectedCategories.toString());
+                    console.log($('#categories').val())
+                    $('#catspan' + id).removeClass('fa fa-square-o');
+                    $('#catspan' + id).addClass('fa fa-check-square-o');
+                }
+                else {
+
+                    // if it is there
+                    // remove the hidden input element
+                    // remove the checkmark on the category
+                    var i = selectedCategories.indexOf(id);
+                    selectedCategories.splice(i, 1);
+                    $('#categories').val(selectedCategories.toString());
+                    $('#catadd' + id).remove();
+                    $('#catspan' + id).removeClass('fa fa-check-square-o');
+                    $('#catspan' + id).addClass('fa fa-square-o');
+
+                }
+            }
+
 
     </script>
-    }
+}
