a couple changes idk

--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -84,7 +84,7 @@
         </div>
 
 
-        <!--TODO - Needs to populate only projects from the signed in entity-->
+        <!--->Needs to populate only projects from the signed in entity-->
         <div class="form-group">
             @Html.LabelFor(model => model.Investment.projectFrom, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
