halfway through writing ajax call for getting Investments linked to logged in entity

--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -28,6 +28,9 @@
         </th>
     </tr>
 
+        @{ 
+            var 
+        }
         @foreach (var item in Model.Investments)
         {
         <tr>
