--- a/ImpactMap/Views/Shared/_LoginPartial.cshtml
+++ b/ImpactMap/Views/Shared/_LoginPartial.cshtml
@@ -9,6 +9,15 @@
         <li>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
+        <li>
+            @Html.ActionLink("Investments", "Index", "Investments")
+        </li>
+        <li>
+            @Html.ActionLink("Projects", "Index", "Projects")
+        </li>
+        <li>
+            @Html.ActionLink("Reports", "Index", "Reports")
+        </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
