--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -4,6 +4,13 @@
     ViewBag.Title = "Index";
 }
 
+<style>
+    #map {
+        height: 400px;
+        width: 100%;
+    }
+</style>
+
 <h1>Dashboard</h1>
 
 @if (Model.Investments != null)
